parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@with.py-4.snap
---
source: parser/src/lexer/lexer.rs
description: "with (a as b, c as d): pass"
input_file: parser/test_data/inputs/one_liners/with.py
---
[
    Token {
        kind: With,
        value: None,
        start: 0,
        end: 4,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 5,
        end: 6,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: As,
        value: None,
        start: 8,
        end: 10,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 11,
        end: 12,
    },
    Token {
        kind: Comma,
        value: None,
        start: 12,
        end: 13,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 14,
        end: 15,
    },
    Token {
        kind: As,
        value: None,
        start: 16,
        end: 18,
    },
    Token {
        kind: Identifier,
        value: Str(
            "d",
        ),
        start: 19,
        end: 20,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 20,
        end: 21,
    },
    Token {
        kind: Colon,
        value: None,
        start: 21,
        end: 22,
    },
    Token {
        kind: Pass,
        value: None,
        start: 23,
        end: 27,
    },
]
