parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@with.py-5.snap
---
source: parser/src/lexer/mod.rs
description: "async with a as b: pass"
input_file: parser/test_data/inputs/one_liners/with.py
---
[
    Token {
        kind: Async,
        value: None,
        start: 0,
        end: 5,
    },
    Token {
        kind: With,
        value: None,
        start: 6,
        end: 10,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 11,
        end: 12,
    },
    Token {
        kind: As,
        value: None,
        start: 13,
        end: 15,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 16,
        end: 17,
    },
    Token {
        kind: Colon,
        value: None,
        start: 17,
        end: 18,
    },
    Token {
        kind: Pass,
        value: None,
        start: 19,
        end: 23,
    },
]
