parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@with.py.snap
---
source: parser/src/lexer/lexer.rs
description: "with a: pass"
input_file: parser/test_data/inputs/one_liners/with.py
---
[
    Token {
        kind: With,
        value: None,
        start: 0,
        end: 4,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 5,
        end: 6,
    },
    Token {
        kind: Colon,
        value: None,
        start: 6,
        end: 7,
    },
    Token {
        kind: Pass,
        value: None,
        start: 8,
        end: 12,
    },
]
