parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__string-literals-1.snap
---
source: parser/src/lexer/mod.rs
description: "\"world\""
---
[
    Token {
        kind: StringLiteral,
        value: Str(
            "\"world\"",
        ),
        start: 0,
        end: 7,
    },
]
