parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__string-literals-2.snap
---
source: parser/src/lexer/lexer.rs
description: "\"\""
---
[
    Token {
        kind: StringLiteral,
        value: Str(
            "\"\"",
        ),
        start: 0,
        end: 2,
    },
]
