parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__string-literals-4.snap
---
source: parser/src/lexer/mod.rs
description: "'hello'"
---
[
    Token {
        kind: StringLiteral,
        value: Str(
            "'hello'",
        ),
        start: 0,
        end: 7,
    },
]
